examples/test/testpolicy5198.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5198
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key35: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value22
          key33: value2
          key39: value2
      podSelector:
        matchLabels:
          key40: value8
          key26: value18
          key48: value1
